--- a/src/home.html
+++ b/src/home.html
@@ -193,7 +193,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -236,7 +240,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -279,7 +287,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -322,7 +334,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -365,7 +381,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -408,7 +428,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -451,7 +475,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -494,7 +522,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -537,7 +569,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
@@ -580,7 +616,11 @@
                         </div>
                       </div>
                     </div>
-                    <a href="" class="item-level__button button">
+                    <a
+                      href=""
+                      data-popup="#popup-claim"
+                      class="item-level__button button"
+                    >
                       Claim - 0.0048237 ETH
                       <img src="@img/svg/valute.svg" alt="" />
                     </a>
