--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -157,3 +157,32 @@
     </div>
   </div>
 </div>
+<div id="popup-calc" aria-hidden="true" class="popup">
+  <div class="popup__wrapper">
+    <div class="popup__content">
+      <button data-close type="button" class="popup__close">
+        <img src="@img/svg/close.svg" alt="" />
+      </button>
+      <div class="popup__title">ROI Calculator</div>
+      <form action="#" class="calc">
+        <div class="calc__item">
+          <div class="calc__label">Get Staked</div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<div id="popup-claim" aria-hidden="true" class="popup">
+  <div class="popup__wrapper">
+    <div class="popup__content">
+      <button data-close type="button" class="popup__close">
+        <img src="@img/svg/close.svg" alt="" />
+      </button>
+      <div class="popup__title">Claim ETH</div>
+      <div class="popup__factor">
+        <img src="@img/main-img//factor.png" alt="" />
+      </div>
+      <a href="" class="popup__claim-button button"> Claim </a>
+    </div>
+  </div>
+</div>
