--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
       <div class="rootpage__info">Опис проєкту</div>
       <h2>Готові сторінки:</h2>
       <ol class="rootpage__list">
-        <li><a target="_blank" href="home.html">Головна</a></li>
+        <li><a target="_blank" href="home.html">HomePage</a></li>
+        <li><a target="_blank" href="history.html">History</a></li>
+        <li><a target="_blank" href="about.html">About</a></li>
+        <li><a target="_blank" href="pool.html">About</a></li>
       </ol>
     </div>
   </body>
