--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <li><a target="_blank" href="home.html">HomePage</a></li>
         <li><a target="_blank" href="history.html">History</a></li>
         <li><a target="_blank" href="about.html">About</a></li>
-        <li><a target="_blank" href="pool.html">About</a></li>
+        <li><a target="_blank" href="pools.html">Pools</a></li>
       </ol>
     </div>
   </body>
