--- a/src/pools.html
+++ b/src/pools.html
@@ -104,9 +104,19 @@
                       <span>34.0659</span>
                     </div>
                   </div>
-                  <a href="" class="item-pool__details">
-                    Details <img src="@img/svg/arrow-small.svg" alt="" />
-                  </a>
+                  <div data-spollers class="pool-spollers">
+                    <div class="pool-spollers__item">
+                      <a href="" data-spoller class="item-pool__details">
+                        Details <img src="@img/svg/arrow-small.svg" alt="" />
+                      </a>
+                      <div class="pool-spollers__body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Etiam sapien ipsum, gravida in pulvinar a, euismod sit
+                        amet nisi. Vestibulum quam felis, faucibus vitae
+                        consequat vitae, aliquet sit amet neque.
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="pool__item item-pool">
                   <div class="item-pool__head">
@@ -143,9 +153,19 @@
                       <span>34.0659</span>
                     </div>
                   </div>
-                  <a href="" class="item-pool__details">
-                    Details <img src="@img/svg/arrow-small.svg" alt="" />
-                  </a>
+                  <div data-spollers class="pool-spollers">
+                    <div class="pool-spollers__item">
+                      <a href="" data-spoller class="item-pool__details">
+                        Details <img src="@img/svg/arrow-small.svg" alt="" />
+                      </a>
+                      <div class="pool-spollers__body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Etiam sapien ipsum, gravida in pulvinar a, euismod sit
+                        amet nisi. Vestibulum quam felis, faucibus vitae
+                        consequat vitae, aliquet sit amet neque.
+                      </div>
+                    </div>
+                  </div>
                 </div>
                 <div class="pool__item item-pool">
                   <div class="item-pool__head">
@@ -170,9 +190,19 @@
                     <a href="" class="item-pool__button button"> Approve</a>
                   </div>
                   <div class="item-pool__bottom"></div>
-                  <a href="" class="item-pool__details">
-                    Details <img src="@img/svg/arrow-small.svg" alt="" />
-                  </a>
+                  <div data-spollers class="pool-spollers">
+                    <div class="pool-spollers__item">
+                      <a href="" data-spoller class="item-pool__details">
+                        Details <img src="@img/svg/arrow-small.svg" alt="" />
+                      </a>
+                      <div class="pool-spollers__body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Etiam sapien ipsum, gravida in pulvinar a, euismod sit
+                        amet nisi. Vestibulum quam felis, faucibus vitae
+                        consequat vitae, aliquet sit amet neque.
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
