--- a/src/html/_popup.htm
+++ b/src/html/_popup.htm
@@ -104,7 +104,7 @@
         <img src="@img/svg/close.svg" alt="" />
       </button>
       <div class="popup__title">Referral History</div>
-      <div class="popup__table popup-table">
+      <div class="history__table history-table">
         <table>
           <thead>
             <th>Amount</th>
@@ -113,42 +113,55 @@
           </thead>
           <tbody>
             <tr>
-              <td>
-                <div class="popup-table__yellow">
+              <td data-label="Amount">
+                <div class="history-table__value yellow">
                   0.123 <img src="@img/svg/valute.svg" alt="" />
                 </div>
               </td>
-              <td>
-                <div class="popup-table__text">Jul 10 22:46:34</div>
+              <td data-label="Data/Time">
+                <div class="history-table__value">Jul 10 22:46:34</div>
               </td>
-              <td>
-                <div class="popup-table__text">sgkhkajsdhkasjdhk</div>
+              <td data-label="Adress">
+                <div class="history-table__value">sgkhkajsdhkasjdhk</div>
               </td>
             </tr>
             <tr>
-              <td>
-                <div class="popup-table__yellow">
+              <td data-label="Amount">
+                <div class="history-table__value yellow">
                   0.123 <img src="@img/svg/valute.svg" alt="" />
                 </div>
               </td>
-              <td>
-                <div class="popup-table__text">Jul 10 22:46:34</div>
+              <td data-label="Data/Time">
+                <div class="history-table__value">Jul 10 22:46:34</div>
               </td>
-              <td>
-                <div class="popup-table__text">sgkhkajsdhkasjdhk</div>
+              <td data-label="Adress">
+                <div class="history-table__value">sgkhkajsdhkasjdhk</div>
               </td>
             </tr>
             <tr>
-              <td>
-                <div class="popup-table__yellow">
+              <td data-label="Amount">
+                <div class="history-table__value yellow">
                   0.123 <img src="@img/svg/valute.svg" alt="" />
                 </div>
               </td>
-              <td>
-                <div class="popup-table__text">Jul 10 22:46:34</div>
+              <td data-label="Data/Time">
+                <div class="history-table__value">Jul 10 22:46:34</div>
               </td>
-              <td>
-                <div class="popup-table__text">sgkhkajsdhkasjdhk</div>
+              <td data-label="Adress">
+                <div class="history-table__value">sgkhkajsdhkasjdhk</div>
+              </td>
+            </tr>
+            <tr>
+              <td data-label="Amount">
+                <div class="history-table__value yellow">
+                  0.123 <img src="@img/svg/valute.svg" alt="" />
+                </div>
+              </td>
+              <td data-label="Data/Time">
+                <div class="history-table__value">Jul 10 22:46:34</div>
+              </td>
+              <td data-label="Adress">
+                <div class="history-table__value">sgkhkajsdhkasjdhk</div>
               </td>
             </tr>
           </tbody>
@@ -167,6 +180,113 @@
       <form action="#" class="calc">
         <div class="calc__item">
           <div class="calc__label">Get Staked</div>
+          <div class="calc__wrap">
+            <div class="calc__content">
+              <div class="calc__left">
+                <div class="calc__item-input">
+                  <input
+                    autocomplete="off"
+                    type="text"
+                    name="form[]"
+                    data-error="Ошибка"
+                    placeholder="1000"
+                    class="input"
+                  />
+                  <span class="calc__valute"> USD </span>
+                </div>
+                <div class="calc__two-valute">232242.332 CAKE</div>
+              </div>
+              <div class="calc__icon-arrow">
+                <img src="@img/svg/calc-arrows.svg" alt="" />
+              </div>
+            </div>
+          </div>
+          <div class="calc__tags">
+            <button class="calc__tag">$100</button>
+            <button class="calc__tag">$1000</button>
+            <button class="calc__tag">$10 000</button>
+            <button class="calc__tag">MY BALANCE</button>
+            <span data-tippy-content="Lorem iposum" class="calc__info">
+              <img src="@img/svg/question.svg" alt="" />
+            </span>
+          </div>
+          <div class="calc__label">Staked For</div>
+          <div class="options">
+            <div class="options__item">
+              <input
+                hidden
+                id="o_1"
+                class="options__input"
+                checked
+                type="radio"
+                value="1"
+                name="option"
+              />
+              <label for="o_1" class="options__label"
+                ><span class="options__text">1D</span></label
+              >
+            </div>
+            <div class="options__item">
+              <input
+                hidden
+                id="o_2"
+                class="options__input"
+                type="radio"
+                value="2"
+                name="option"
+              />
+              <label for="o_2" class="options__label"
+                ><span class="options__text">7D</span></label
+              >
+            </div>
+            <div class="options__item">
+              <input
+                hidden
+                id="o_3"
+                class="options__input"
+                type="radio"
+                value="3"
+                name="option"
+              />
+              <label for="o_3" class="options__label"
+                ><span class="options__text">30D</span></label
+              >
+            </div>
+            <div class="options__item">
+              <input
+                hidden
+                id="o_4"
+                class="options__input"
+                type="radio"
+                value="4"
+                name="option"
+              />
+              <label for="o_4" class="options__label"
+                ><span class="options__text">1Y</span></label
+              >
+            </div>
+            <div class="options__item">
+              <input
+                hidden
+                id="o_5"
+                class="options__input"
+                type="radio"
+                value="5"
+                name="option"
+              />
+              <label for="o_5" class="options__label"
+                ><span class="options__text">5Y</span></label
+              >
+            </div>
+          </div>
+          <div class="calc__arrow-down">
+            <img src="@img/svg/arrow-big.svg" alt="" />
+          </div>
+          <div class="calc__bottom">
+            <div class="calc__bottom-head">ROT at current rates</div>
+            <div class="calc__bottom-value">$22.45</div>
+            <div class="calc__bottom-finish">= 2545 CAKE (2.25%)</div>
+          </div>
         </div>
       </form>
     </div>
