--- a/src/pools.html
+++ b/src/pools.html
@@ -84,8 +84,20 @@
                       18.95738 USDT
                     </div>
                     <div class="item-pool__buttons-small">
-                      <a href="" class="item-pool__button-small"> + </a>
-                      <a href="" class="item-pool__button-small"> - </a>
+                      <a
+                        href=""
+                        data-popup="#popup-staked"
+                        class="item-pool__button-small"
+                      >
+                        +
+                      </a>
+                      <a
+                        href=""
+                        data-popup="#popup-unstaked"
+                        class="item-pool__button-small"
+                      >
+                        -
+                      </a>
                     </div>
                   </div>
                   <div class="item-pool__profit">
@@ -98,22 +110,16 @@
                       Compound
                     </a>
                   </div>
-                  <div class="item-pool__bottom">
-                    <div class="item-pool__profit">
-                      <span> Total Staked </span>
-                      <span>34.0659</span>
-                    </div>
-                  </div>
                   <div data-spollers class="pool-spollers">
                     <div class="pool-spollers__item">
                       <a href="" data-spoller class="item-pool__details">
                         Details <img src="@img/svg/arrow-small.svg" alt="" />
                       </a>
                       <div class="pool-spollers__body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Etiam sapien ipsum, gravida in pulvinar a, euismod sit
-                        amet nisi. Vestibulum quam felis, faucibus vitae
-                        consequat vitae, aliquet sit amet neque.
+                        <div class="item-pool__profit">
+                          <span> Total Staked </span>
+                          <span>34.0659</span>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -143,14 +149,20 @@
                       18.95738 USDT
                     </div>
                     <div class="item-pool__buttons-small">
-                      <a href="" class="item-pool__button-small"> + </a>
-                      <a href="" class="item-pool__button-small"> - </a>
-                    </div>
-                  </div>
-                  <div class="item-pool__bottom">
-                    <div class="item-pool__profit">
-                      <span> Total Staked </span>
-                      <span>34.0659</span>
+                      <a
+                        href=""
+                        data-popup="#popup-staked"
+                        class="item-pool__button-small"
+                      >
+                        +
+                      </a>
+                      <a
+                        href=""
+                        data-popup="#popup-unstaked"
+                        class="item-pool__button-small"
+                      >
+                        -
+                      </a>
                     </div>
                   </div>
                   <div data-spollers class="pool-spollers">
@@ -159,10 +171,10 @@
                         Details <img src="@img/svg/arrow-small.svg" alt="" />
                       </a>
                       <div class="pool-spollers__body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Etiam sapien ipsum, gravida in pulvinar a, euismod sit
-                        amet nisi. Vestibulum quam felis, faucibus vitae
-                        consequat vitae, aliquet sit amet neque.
+                        <div class="item-pool__profit">
+                          <span> Total Staked </span>
+                          <span>34.0659</span>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -189,17 +201,16 @@
                   <div class="item-pool__buttons">
                     <a href="" class="item-pool__button button"> Approve</a>
                   </div>
-                  <div class="item-pool__bottom"></div>
                   <div data-spollers class="pool-spollers">
                     <div class="pool-spollers__item">
                       <a href="" data-spoller class="item-pool__details">
                         Details <img src="@img/svg/arrow-small.svg" alt="" />
                       </a>
                       <div class="pool-spollers__body">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Etiam sapien ipsum, gravida in pulvinar a, euismod sit
-                        amet nisi. Vestibulum quam felis, faucibus vitae
-                        consequat vitae, aliquet sit amet neque.
+                        <div class="item-pool__profit">
+                          <span> Total Staked </span>
+                          <span>34.0659</span>
+                        </div>
                       </div>
                     </div>
                   </div>
